--- a/Playble1/settings/v2/packages/project.json
+++ b/Playble1/settings/v2/packages/project.json
@@ -2,9 +2,10 @@
   "__version__": "1.0.6",
   "general": {
     "designResolution": {
-      "height": 1920,
-      "width": 1080,
-      "fitHeight": true
+      "height": 640,
+      "width": 960,
+      "fitHeight": false,
+      "fitWidth": true
     }
   },
   "sorting-layer": {
